--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,7 +60,7 @@ test_script:
     # Not much of a real test yet, just try to build myself...
     - "%CMD_IN_ENV% conda build vpython.recipe"
     # ...and build a wheel.
-    - "%CMD_IN_ENV% python setup.py wheel"
+    - "%CMD_IN_ENV% python setup.py bdist_wheel"
 
 on_success:
     - echo %APPVEYOR_REPO_TAG%
