Make more installs quiet

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,9 +56,9 @@ install:
     - cmd: conda install --quiet wheel
 
     # These installs are needed on windows but not other platforms.
-    - cmd: conda install patch psutil
+    - cmd: conda install --quiet patch psutil
 
-    - conda create -n wheel-build python=%CONDA_PY% wheel cython
+    - conda create --quiet -n wheel-build python=%CONDA_PY% wheel cython
 
 # Skip .NET project specific build phase.
 build: off
