--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ env:
         - CONDA_INSTALL_LOCN="${HOME}/miniconda"
     matrix:
         - CONDA_PY=2.7
+        - CONDA_PY=3.4
+        - CONDA_PY=3.5
 
 install:
     # Install and set up miniconda.
