Roll back setuptools to v20 on appveyor

--- a/vpython.recipe/meta.yaml
+++ b/vpython.recipe/meta.yaml
@@ -29,7 +29,7 @@ build:
 requirements:
   build:
     - python
-    - setuptools
+    - setuptools 20*
     - jupyter
     - vpnotebook
     - ujson
