Revert "Roll back setuptools to v20 on appveyor"
This reverts commit a891aee1e50923cd5dcaa89ba0b48d62430b2441.

--- a/vpython.recipe/meta.yaml
+++ b/vpython.recipe/meta.yaml
@@ -29,7 +29,7 @@ build:
 requirements:
   build:
     - python
-    - setuptools 20*
+    - setuptools
     - jupyter
     - vpnotebook
     - ujson
