--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,6 @@
 VCS = git
 style = pep440
 versionfile_source = vpython/_version.py
-versionfile_build =
+versionfile_build = vpython/_version.py
 tag_prefix =
 parentdir_prefix =
