--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,6 +74,7 @@ test_script:
     - conda build --output vpython.recipe > to_upload.txt
     - set /P BUILT_PACKAGE=<to_upload.txt
     - type to_upload.txt
+    - for /F "delims=" %%i in (to_upload.txt) do set "BUILT_PACKAGE=%%i"
     - echo %BUILT_PACKAGE%
     # ...so that we can set a variable to the name of that output file.
     - python -c "from __future__ import print_function; from glob import glob; import os; from conda_build import config; pattern = os.path.join(config.config.bldpkgs_dir, 'vpython-*.tar.bz2'); print(glob(pattern)[0])" > to_upload.txt
