--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,13 @@ env:
         - CONDA_INSTALL_LOCN="${HOME}/miniconda"
     matrix:
         - CONDA_PY=2.7
-        - CONDA_PY=3.4
         - CONDA_PY=3.5
+        - CONDA_PY=3.6
 
 install:
     # Install and set up miniconda.
-    - if [ $TRAVIS_OS_NAME == "linux" ]; then wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh; fi
-    - if [ $TRAVIS_OS_NAME == "osx" ]; then wget http://repo.continuum.io/miniconda/Miniconda-latest-MacOSX-x86_64.sh -O miniconda.sh; fi
+    - if [ $TRAVIS_OS_NAME == "linux" ]; then wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh; fi
+    - if [ $TRAVIS_OS_NAME == "osx" ]; then wget http://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh; fi
     - bash miniconda.sh -b -p $CONDA_INSTALL_LOCN
     - export PATH=${CONDA_INSTALL_LOCN}/bin:$PATH
     - conda config --set always_yes true
@@ -32,19 +32,22 @@ install:
     - conda install --quiet jinja2 conda-build anaconda-client cython
 
     # make a wheel building environment to ensure correct python version.
-    - conda create --quiet -n wheel-build python=$CONDA_PY wheel cython
+    # - conda create --quiet -n wheel-build python=$CONDA_PY wheel cython
 
 script:
     # Not much of a real test yet, just try to build myself...
     - conda build --quiet vpython.recipe
     - export CONDA_PACKAGE=`conda build --output vpython.recipe | grep bz2`
+    - export OUTPUT_DIR=`dirname $CONDA_PACKAGE`
+    - export WHEEL_PACKAGE="$OUTPUT_DIR/*.whl"
     - echo $CONDA_PACKAGE
+    - echo $WHEEL_PACKAGE
     # This will fail if the package does not actually exist
     - ls $CONDA_PACKAGE
     # And try making a wheel
-    - source activate wheel-build
-    - python setup.py bdist_wheel
-    - source deactivate
+    # - source activate wheel-build
+    # - python setup.py bdist_wheel
+    # - source deactivate
 
 after_success:
     - echo $TRAVIS_TAG
