--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,9 @@ environment:
       CONDA_PY: "3.5"
       CONDA_INSTALL_LOCN: "C:\\Miniconda35-x64"
     - TARGET_ARCH: "x64"
+      CONDA_PY: "3.4"
+      CONDA_INSTALL_LOCN: "C:\\Miniconda3-x64"
+    - TARGET_ARCH: "x64"
       CONDA_PY: "2.7"
       CONDA_INSTALL_LOCN: "C:\\Miniconda-x64"
 
@@ -37,6 +40,9 @@ environment:
     - TARGET_ARCH: "x86"
       CONDA_PY: "3.5"
       CONDA_INSTALL_LOCN: "C:\\Miniconda35"
+    - TARGET_ARCH: "x86"
+      CONDA_PY: "3.4"
+      CONDA_INSTALL_LOCN: "C:\\Miniconda34"
     - TARGET_ARCH: "x86"
       CONDA_PY: "2.7"
       CONDA_INSTALL_LOCN: "C:\\Miniconda"
