Revise requirements based on python version and revise test

--- a/vpython.recipe/meta.yaml
+++ b/vpython.recipe/meta.yaml
@@ -41,6 +41,7 @@ requirements:
     - jupyter
     - vpnotebook
     - ujson
+    - autobahn # [not py2k and not py34]
 
 outputs:
     - type: wheel   # [not win]
