Fix py.test call on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ script:
     # Run tests
     - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
         python setup.py install;
-        py.test;
+        py.test vpython;
       fi
     # Not much of a real test yet, just try to build myself...
     - conda build --quiet vpython.recipe
