--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,8 +4,8 @@ environment:
   # Install appropriate conda here based on TARGET_ARCH
   CONDA_INSTALL_LOCN: "C:\\conda"
 
-  # Need this to set up compilation on Windows.
-  CMD_IN_ENV: cmd /E:ON /V:ON /C Obvious-CI\scripts\obvci_appveyor_python_build_env.cmd
+  # These installs are needed on windows but not other platforms.
+  INSTALL_ON_WINDOWS: "patch psutil"
 
   BINSTAR_TOKEN:
     secure: eSsu75dpqknmh2NnrfPASDSvzojBRSyoyW9ZdF5VauukhWxmYHbW8E5UE2ZmYnxT
@@ -56,10 +56,7 @@ install:
 
 
 
-    - cmd: conda install --quiet jinja2 conda-build anaconda-client cython wheel
-
-    # These installs are needed on windows but not other platforms.
-    - cmd: conda install --quiet patch psutil
+    - cmd: conda install --quiet jinja2 conda-build anaconda-client cython wheel %INSTALL_ON_WINDOWS%
 
     - conda create --quiet -n wheel-build python=%CONDA_PY% wheel cython
     - conda info -a
