Set minimum autobahn version for python 3.7 compatibility

--- a/vpython.recipe/meta.yaml
+++ b/vpython.recipe/meta.yaml
@@ -41,7 +41,7 @@ requirements:
     - jupyter
     - vpnotebook
     - ujson
-    - autobahn # [not py2k and not py34]
+    - autobahn >=18.8.2
     - numpy
     - ipykernel <5
 
