--- a/labextension/vpython/package.json
+++ b/labextension/vpython/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpython",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "VPython extension for Jupyterlab",
   "keywords": [
     "jupyter",
@@ -14,33 +14,32 @@
   "license": "BSD-3-Clause",
   "author": "John Coady",
   "files": [
-    "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
+    "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf,otf}",
     "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}"
   ],
   "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "repository": {
-    "type": "",
-    "url": ""
-  },
+  "typings": "lib/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "clean": "rimraf lib",
-    "watch": "tsc -w",
-    "prepare": "npm run build"
+    "build": "npm run build:src",
+    "build:src": "tsc",
+    "clean": "rimraf tsconfig.tsbuildinfo",
+    "prepublish": "npm run clean && npm run build",
+    "jpinstall": "jupyter labextension install ."
   },
   "dependencies": {
-    "@jupyterlab/application": "^0.19.1",
-    "@jupyterlab/apputils": "^0.19.1",
-    "@jupyterlab/docregistry": "^0.19.1",
-    "@jupyterlab/notebook": "^0.19.1",
-    "@phosphor/disposable": "^1.1.2",
+    "@jupyterlab/application": "^1.1.2",
+    "@jupyterlab/apputils": "^1.1.2",
+    "@jupyterlab/docregistry": "^1.1.2",
+    "@jupyterlab/notebook": "^1.1.2",
+    "@phosphor/disposable": "^1.3.0",
     "script-loader": "^0.7.2"
   },
   "devDependencies": {
+    "file-loader": "^4.2.0",
+    "webpack": "^4.0.0",
+    "@babel/types": "^7.6.1",
     "rimraf": "^2.6.1",
-    "script-loader": "^0.7.2",
-    "typescript": "~2.9.2"
+    "typescript": "^3.6.3"
   },
   "jupyterlab": {
     "extension": true
