Remove run_test.py in conda recipe in favor of a simple import test
The stuff in run_test.py was checking for a kernel that is no longer
required, and working around import issues in Python 2.7 and 3.4, neither of
which is supported.

--- a/vpython.recipe/meta.yaml
+++ b/vpython.recipe/meta.yaml
@@ -43,6 +43,10 @@ requirements:
     - numpy
     - ipykernel
 
+test:
+  imports:
+    - vpython
+
 outputs:
     # Someday, maybe: - type: wheel
     - type: conda
