--- a/labextension/vpython/package.json
+++ b/labextension/vpython/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpython",
-  "version": "0.4.0",
+  "version": "0.4.3",
   "description": "VPython extension for Jupyterlab",
   "keywords": [
     "jupyter",
@@ -27,10 +27,11 @@
     "jpinstall": "jupyter labextension install ."
   },
   "dependencies": {
-    "@jupyterlab/application": "^1.1.2",
-    "@jupyterlab/apputils": "^1.1.2",
-    "@jupyterlab/docregistry": "^1.1.2",
-    "@jupyterlab/notebook": "^1.1.2",
+    "@jupyterlab/application": "^1.1.3",
+    "@jupyterlab/apputils": "^1.1.3",
+	  "@jupyterlab/coreutils": "^3.1.0",
+    "@jupyterlab/docregistry": "^1.1.3",
+    "@jupyterlab/notebook": "^1.1.3",
     "@phosphor/disposable": "^1.3.0",
     "script-loader": "^0.7.2"
   },
